<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/address_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="12dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Address"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@id/price_editTextNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dropDown_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/housingType"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_editText" />

    <Spinner
        android:id="@+id/dropDown_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/dropDown_textView"
        app:layout_constraintStart_toEndOf="@+id/dropDown_textView"
        app:layout_constraintTop_toTopOf="@+id/dropDown_textView" />

    <CheckBox
        android:id="@+id/addHousing_isRental_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:text="Is rental"
        app:layout_constraintBottom_toBottomOf="@+id/dropDown_textView"
        app:layout_constraintStart_toEndOf="@+id/dropDown_spinner"
        app:layout_constraintTop_toTopOf="@+id/dropDown_textView" />

    <TextView
        android:id="@+id/addHousing_rentPerTitle_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Rent per:"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/addHousing_isRental_checkBox"
        app:layout_constraintTop_toBottomOf="@+id/addHousing_isRental_checkBox" />

    <Spinner
        android:id="@+id/addHousing_rentPer_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/addHousing_rentPerTitle_textView"
        app:layout_constraintStart_toEndOf="@+id/addHousing_rentPerTitle_textView"
        app:layout_constraintTop_toTopOf="@+id/addHousing_rentPerTitle_textView" />

    <EditText
        android:id="@+id/price_editTextNumber"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:ems="10"
        android:hint="@string/price"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/address_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/address_editText"
        app:layout_constraintTop_toTopOf="@+id/address_editText" />

    <TextView
        android:id="@+id/amenitiesTitle_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/amenities"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addHousing_rentPerTitle_textView" />

    <TableLayout
        android:id="@+id/amenities_tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amenitiesTitle_textView"/>

    <LinearLayout
        android:id="@+id/imageLinks"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amenities_tableLayout">

        <EditText
            android:id="@+id/imageLink1_inputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/image_url_can_be_left_empty"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/imageLink2_inputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/image_url_can_be_left_empty"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/imageLink3_inputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="Image url (can be left empty)"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/imageLink4_inputField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="Image url (can be left empty)"
            android:inputType="textPersonName" />

    </LinearLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:text="Add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLinks" />

</androidx.constraintlayout.widget.ConstraintLayout>