<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="185dp"
    android:layout_height="wrap_content"
    android:background="@color/teal_700"
    android:paddingTop="8dp"
    android:paddingBottom="16dp"

    tools:visibility="visible">

    <TextView
        android:id="@+id/filterBarTitle_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/horizontalRule"
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_marginTop="2dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/filterBarTitle_textView"
        app:layout_constraintStart_toStartOf="@+id/filterBarTitle_textView"
        app:layout_constraintTop_toBottomOf="@+id/filterBarTitle_textView" />

    <CheckBox
        android:id="@+id/filterBar_filterPrice_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="Price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalRule" />

    <CheckBox
        android:id="@+id/filterBar_filterAmenities_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="Amenities"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalRule" />

    <CheckBox
        android:id="@+id/filterBar_filterType_checkBox"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginTop="8dp"
        android:text="Housing type"
        app:layout_constraintStart_toStartOf="@+id/filterBar_filterPrice_checkBox"
        app:layout_constraintTop_toBottomOf="@+id/filterBar_filterPrice_checkBox" />

    <View
        android:id="@+id/horizontalRule2"
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_marginTop="2dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/filterBarTitle_textView"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="@+id/filterBarTitle_textView"
        app:layout_constraintTop_toBottomOf="@+id/filterBar_filterType_checkBox" />

    <TextView
        android:id="@+id/filterBar_priceTitle_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalRule2"
        android:visibility="gone"/>


    <EditText
        android:id="@+id/filterBar_fromPrice_editText"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="$ From"
        android:inputType="numberDecimal"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterBar_priceTitle_textView"
        android:visibility="gone" />

    <TextView
        android:id="@+id/filterBar_priceDivider_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="-"
        app:layout_constraintBottom_toBottomOf="@+id/filterBar_fromPrice_editText"
        app:layout_constraintEnd_toStartOf="@+id/filterBar_toPrice_editText"
        app:layout_constraintStart_toEndOf="@+id/filterBar_fromPrice_editText"
        app:layout_constraintTop_toTopOf="@+id/filterBar_fromPrice_editText"
        android:visibility="gone" />

    <EditText
        android:id="@+id/filterBar_toPrice_editText"
        android:layout_width="75dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="$ To"
        android:inputType="numberDecimal"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterBar_priceTitle_textView"
        android:visibility="gone" />

    <View
        android:id="@+id/horizontalRule3"
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_marginTop="2dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/filterBarTitle_textView"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="@+id/filterBarTitle_textView"
        app:layout_constraintTop_toBottomOf="@+id/filterBar_fromPrice_editText"
        android:visibility="gone" />

    <TextView
        android:id="@+id/filterBar_amenitiesTitle_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/amenities"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalRule3"
        android:visibility="gone" />

    <TableLayout
        android:id="@+id/filterBar_amenities_tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterBar_amenitiesTitle_textView"
        android:visibility="gone" />

    <View
        android:id="@+id/horizontalRule4"
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_marginTop="2dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/filterBarTitle_textView"
        app:layout_constraintStart_toStartOf="@+id/filterBarTitle_textView"
        app:layout_constraintTop_toBottomOf="@+id/filterBar_amenities_tableLayout"
        android:visibility="gone" />

    <TextView
        android:id="@+id/filterBar_housingTypeTitle_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/housingType"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalRule4"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/filterBar_housingType_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filterBar_housingTypeTitle_textView"
        android:visibility="gone" />

    <View
        android:id="@+id/horizontalRule5"
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_marginTop="2dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/filterBarTitle_textView"
        app:layout_constraintStart_toStartOf="@+id/filterBarTitle_textView"
        app:layout_constraintTop_toBottomOf="@+id/filterBar_housingType_spinner"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/filterBar_addFilter_imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalRule5"
        android:visibility="gone" />

    <TextView
        android:id="@+id/filterBar_addFilterTitle_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Add Filter"
        app:layout_constraintLeft_toLeftOf="@id/filterBar_addFilter_imageView"
        app:layout_constraintRight_toRightOf="@id/filterBar_addFilter_imageView"
        app:layout_constraintTop_toBottomOf="@id/filterBar_addFilter_imageView"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/filterBar_clearFilter_imageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalRule5"
        android:visibility="gone" />

    <TextView
        android:id="@+id/filterBar_clearFilterTitle_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="Clear Filter"
        app:layout_constraintLeft_toLeftOf="@id/filterBar_clearFilter_imageView"
        app:layout_constraintRight_toRightOf="@id/filterBar_clearFilter_imageView"
        app:layout_constraintTop_toBottomOf="@id/filterBar_clearFilter_imageView"
        android:visibility="gone" />


</androidx.constraintlayout.widget.ConstraintLayout>